--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -7,6 +7,8 @@
 
 @import "./components/button";
 
+@import "./setting/setting";
+
 @import './layout/header.scss';
 @import './layout/footer.scss';
 
