--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -1,4 +1,15 @@
-<h1 class="header">我是 header</h1>
-<a href="index.html">index</a>
-<a href="about.html">about</a>
-<a href="contact.html">contact</a>
+<header class="header border-bottom border-main">
+    <div class="container py-3 d-flex justify-content-between align-items-center">
+        <h1>
+            <a href="index.html">浪潮情緒卡</a>
+        </h1>
+        <ul class="d-flex justify-content-between align-items-center mb-0 ps-0">
+            <li>
+                <a href="login.html" class="btn btn-main c-btn">登入</a>
+            </li>
+            <li class="ms-3">
+                <a href="signUp.html" class="btn btn-pink c-btn">註冊</a>
+            </li>
+        </ul>
+    </div>
+</header>
