Create index.html and it's style

--- a/assets/scss/utils/_variables.scss
+++ b/assets/scss/utils/_variables.scss
@@ -310,6 +310,7 @@ $main:      #3C9DAE;
 $main-tint: #EAF2F4;
 $main-dark: #417C88;
 $pink:           #C37979;
+$pink-dark:      #B17075;
 $emo-happy:      #FFE589;
 $emo-expectation:#F8C18F;
 $emo-relived:    #CEE5AF;
