--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -1,4 +1,4 @@
-<header class="header border-bottom border-main">
+<header class="header mb-1 border-bottom border-main-tint sticky-top">
     <div class="container py-3 d-flex justify-content-between align-items-center">
         <h1>
             <a href="index.html">浪潮情緒卡</a>
