--- a/assets/scss/components/_button.scss
+++ b/assets/scss/components/_button.scss
@@ -6,3 +6,19 @@
     font-size: 16px;
     font-weight: bold;
 }
+
+.c-btn:hover {
+    color: $white;
+}
+
+.c-btn-xl {
+    padding: 12px 32px;
+    border: 3px solid $white;
+    font-size: 32px;
+}
+
+.c-btn-xl:hover {
+    background-color: $pink-dark;
+    border: 3px solid $white;
+    color: $white;
+}
