--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -1,3 +1,22 @@
-.index-title {
-  font-size: 100px;
+.homepage {
+  padding: 72px 0;
+  background-image: url(../images/homepage.svg);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+  // position: relative;
+  // img {
+  //   width: 100%;
+  //   height: 100%;object-fit: cover;
+  // }
+  // .container {
+  //   position: absolute;
+  //   top:50%;
+  //   left: 50%;
+  //   transform: translate(-50%, -50%);
+  // }
+  h2 {
+    font-size: 128px;
+  }
 }
