--- a/assets/scss/components/_button.scss
+++ b/assets/scss/components/_button.scss
@@ -9,16 +9,31 @@
 
 .c-btn:hover {
     color: $white;
+    box-shadow: 2px 2px 4px rgba(112, 132, 136, 0.5);
 }
 
 .c-btn-xl {
     padding: 12px 32px;
-    border: 3px solid $white;
+    border: 4px solid $white;
     font-size: 32px;
 }
 
 .c-btn-xl:hover {
-    background-color: $pink-dark;
-    border: 3px solid $white;
+    background-color: #cc8d8d;
+    border: 6px solid $white;
+    box-shadow: 6px 6px 12px rgba(69, 70, 71, 0.5);
+    color: $white;
+}
+
+.c-btn-outline-main {
+    border: 2px solid $main;
+    border-radius: 100px;
+    padding: 4px 16px;
+    color: $main;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.c-btn-outline-main:hover {
     color: $white;
 }
