--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -1,5 +1,6 @@
 .header{
   background: $white;
+  box-shadow: 0 4px 10px rgba(144, 144, 144, 0.25);
   h1 a{
     background-image: url(../images/logo_name.svg);
     width: 200px;
