--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -1,5 +1,5 @@
-<header class="header mb-1 border-bottom border-main-tint sticky-top">
-    <div class="container py-3 d-flex justify-content-between align-items-center">
+<header class="header sticky-top">
+    <div class="container py-16 d-flex justify-content-between align-items-center">
         <h1>
             <a href="index.html">浪潮情緒卡</a>
         </h1>
@@ -7,7 +7,7 @@
             <li>
                 <a href="login.html" class="btn btn-main c-btn">登入</a>
             </li>
-            <li class="ms-3">
+            <li class="ms-16">
                 <a href="signUp.html" class="btn btn-pink c-btn">註冊</a>
             </li>
         </ul>
