--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -8,7 +8,7 @@
                 <a href="login.html" class="btn btn-main c-btn">登入</a>
             </li>
             <li class="ms-16">
-                <a href="signUp.html" class="btn btn-pink c-btn">註冊</a>
+                <a href="signup.html" class="btn btn-pink c-btn">註冊</a>
             </li>
         </ul>
     </div>
