--- a/assets/scss/utils/_variables.scss
+++ b/assets/scss/utils/_variables.scss
@@ -307,9 +307,12 @@ $danger:         #DC4C64;//$red !default;
 $light:          #FBFBFB;//$gray-100 !default;
 $dark:           #332D2D;//$gray-900 !default;
 $main:      #3C9DAE;
-$main-tint: #9fcdd9;
+$main-tint01: #85C5D6;
+$main-tint02: #B1DBE5;
 $main-dark: #417C88;
 $pink:           #C37979;
+$pink-tint01:    #D89591;
+$pink-tint02:    #E8B0AC;
 $pink-dark:      #B17075;
 $emo-happy:      #FFE589;
 $emo-expectation:#F8C18F;
@@ -333,9 +336,13 @@ $theme-colors: (
   "light":      $light,
   "dark":       $dark,
   "main":       $main,
-  "main-tint":  $main-tint,
+  "main-tint01": $main-tint01,
+  "main-tint02":  $main-tint02,
   "main-dark":  $main-dark,
   "pink":            $pink,
+  "pink-tint01":     $pink-tint01,
+  "pink-tint02":     $pink-tint02,
+  "pink-dark":       $pink-dark,
   "emo-happy":       $emo-happy,
   "emo-expectation": $emo-expectation,
   "emo-relived":     $emo-relived,
@@ -882,7 +889,7 @@ $input-focus-color:                     $input-color !default;
 $input-focus-width:                     $input-btn-focus-width !default;
 $input-focus-box-shadow:                $input-btn-focus-box-shadow !default;
 
-$input-placeholder-color:               $gray-600 !default;
+$input-placeholder-color:               $gray-500;//$gray-600 !default;
 $input-plaintext-color:                 $body-color !default;
 
 $input-height-border:                   $input-border-width * 2 !default;
