--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -10,6 +10,7 @@
 @import "./setting/setting";
 
 @import './layout/header.scss';
+@import './layout/headerLogined';
 @import './layout/footer.scss';
 
 
