--- a/layout/headerLogined.ejs
+++ b/layout/headerLogined.ejs
@@ -1,29 +1,29 @@
 <header class="header h-logined sticky-top">
     <div class="container py-16 d-flex justify-content-between align-items-center">
         <h1>
-            <a href="index.html">浪潮情緒卡</a>
+            <a href="index.html" id="home">浪潮情緒卡</a>
         </h1>
         <ul class="d-flex justify-content-between align-items-center mb-0 ps-0">
             <li>
-                <a href="aboutEmotions.html" class="px-4 py-8">認識情緒</a>
+                <a href="aboutEmotions.html" class="px-4 py-8" id="aboutEmotions">認識情緒</a>
             </li>
             <li class="ms-16">
-                <a href="findMyEmotions.html" class="px-4 py-8">找尋我的情緒</a>
+                <a href="findMyEmotions.html" class="px-4 py-8" id="findMyEmotions">找尋我的情緒</a>
             </li>
             <li class="ms-16">
-                <a href="myRecords.html" class="px-4 py-8">我的紀錄</a>
+                <a href="myRecords.html" class="px-4 py-8" id="myRecords">我的紀錄</a>
             </li>
             <li class="ms-16">
-                <a href="shared.html" class="px-4 py-8">共享紀錄</a>
+                <a href="shared.html" class="px-4 py-8" id="shared">共享紀錄</a>
             </li>
             <li class="ms-16">
-                <a href="account.html" class="profile">
+                <a href="account.html" class="profile" id="profile">
                     <i class="bi bi-person-fill"></i>
                     <i class="bi bi-person-fill-gear"></i>
                 </a>
             </li>
             <li class="ms-16">
-                <a href="logout.html" class="logout">
+                <a href="logout.html" class="logout" id="logout">
                     <i class="bi bi-door-closed-fill"></i>
                     <i class="bi bi-door-open-fill"></i>
                 </a>
