--- a/assets/scss/pages/_login.scss
+++ b/assets/scss/pages/_login.scss
@@ -51,7 +51,7 @@
         color: $pink-tint02;
         font-size: 14px;
     }
-    input {
+    input, select {
         border-radius: 100px;
     }
     .click-me {
