--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -1,6 +1,6 @@
 <header class="header sticky-top">
     <div class="container py-16 d-flex justify-content-between align-items-center">
-        <h1>
+        <h1 id="home">
             <a href="index.html">浪潮情緒卡</a>
         </h1>
         <ul class="d-flex justify-content-between align-items-center mb-0 ps-0">
