--- a/layout/headerLogined.ejs
+++ b/layout/headerLogined.ejs
@@ -1,7 +1,7 @@
 <header class="header h-logined sticky-top">
     <div class="container py-16 d-flex justify-content-between align-items-center">
         <h1>
-            <a href="index.html" id="home">浪潮情緒卡</a>
+            <a href="home.html" id="home">浪潮情緒卡</a>
         </h1>
         <ul class="d-flex justify-content-between align-items-center mb-0 ps-0">
             <li>
