--- a/assets/scss/utils/_variables.scss
+++ b/assets/scss/utils/_variables.scss
@@ -436,6 +436,8 @@ $spacers: (
   56: $spacer * 3.5,
   60: $spacer * 3.75,
   64: $spacer * 4,
+  72: $spacer * 4.5,
+  96: $spacer * 6,
 ) !default;
 // scss-docs-end spacer-variables-maps
 
