--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -1,1 +1,25 @@
-<!-- <footer class="footer">我是 footer</footer> -->
+<footer class="footer py-48">
+    <div class="container d-flex">
+        <div class="logo me-96">
+            <a href="home.html">
+                <img src="../assets/images/logo_footer.svg" alt="logo">
+            </a>
+        </div>
+        <div class="d-flex pt-24">
+            <div class="me-72">
+                <h3>開發群</h3>
+                <ul class="d-flex">
+                    <li class="me-16">Elma Yu</li>
+                    <li class="me-16">Leon Wu</li>
+                    <li>Espoir Fang</li>
+                </ul>
+            </div>
+            <div class="me-72">
+                <a href="mailto:wave_emocards@gmail.cooom">
+                    <h3>聯絡我們</h3>
+                    <span>wave_emocards@gmail.cooom</span>
+                </a>
+            </div>
+        </div>
+    </div>
+</footer>
