--- a/assets/scss/utils/_variables.scss
+++ b/assets/scss/utils/_variables.scss
@@ -319,11 +319,11 @@ $pink-dark:      #B17075;
 $happy:          #FFE589;
 $expectation:    #F8C18F;
 $relived:        #CEE5AF;
-$unstable:       #C1A1A1;
+$unstable:       #E0CACA;
 $amazed:         #B4B9E7;
 $sadness:        #C5DDE8;
-$hate:           #C0B3A6;
-$anger:          #E98D8D;
+$hate:           #D6CAC0;
+$anger:          #E0AEAE;
 $others:         #EBEBEB;
 // scss-docs-end theme-color-variables
 
