--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -8,6 +8,7 @@
 @import "./setting/reset";
 @import "./setting/base";
 
+@import "./components/fontWeight";
 @import "./components/button";
 @import "./components/cards";
 @import "./components/emoTable";
