--- a/assets/scss/pages/_emoCardsClassified.scss
+++ b/assets/scss/pages/_emoCardsClassified.scss
@@ -14,4 +14,7 @@
         margin-bottom: 32px;
         border-bottom: 2px solid $main-tint02;
     }
+    .emoTableHead {
+        max-height: 52px;
+    }
 }
