--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -10,6 +10,8 @@
 
 @import "./components/fontWeight";
 @import "./components/button";
+@import "./components/guid";
+@import "./components/titleBar";
 @import "./components/cards";
 @import "./components/emoTable";
 
