--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -16,11 +16,11 @@
   }
   a:hover {
     h3 {
-      color: $main-tint02;
-      border-bottom: 1px solid $main-tint02;
+      color: $happy;
+      border-bottom: 1px solid $happy;
     }
     span {
-      color: $main-tint02;
+      color: $happy;
     }
   }
 }
