--- a/assets/scss/components/_cards.scss
+++ b/assets/scss/components/_cards.scss
@@ -40,7 +40,7 @@
     }
 }
 
-.class-card-happy {
+.class-card-happy, .class-card-expectation, .class-card-relived, .class-card-unstable, .class-card-amazed, .class-card-sadness, .class-card-hate, .class-card-anger, .class-card-others {
     border: 0;
 }
 .class-card-happy:hover {
