--- a/assets/scss/components/_emoTable.scss
+++ b/assets/scss/components/_emoTable.scss
@@ -1,3 +1,6 @@
+.emoTableHead {
+    max-height: 52px;
+}
 .btn-emoTable {
     padding: 8px 20px;
     font-size: 20px;
@@ -28,11 +31,11 @@
     border: 3px solid $relived;
 }
 .opacity-unstable {
-    background-color: rgba(193, 161, 161, .2);
+    background-color: rgba(193, 161, 161, .15);
     border: 3px solid rgba(193, 161, 161, .05);
 }
 .opacity-unstable:hover {
-    background-color: rgba(193, 161, 161, .5);
+    background-color: rgba(193, 161, 161, .4);
     border: 3px solid $unstable;
 }
 .opacity-amazed {
