--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -14,6 +14,7 @@
 @import "./components/titleBar";
 @import "./components/cards";
 @import "./components/emoTable";
+@import "./components/form";
 
 @import './layout/header.scss';
 @import './layout/headerLogined';
