--- a/assets/scss/components/_button.scss
+++ b/assets/scss/components/_button.scss
@@ -78,3 +78,39 @@
         color: $white;
     }
 }
+
+// 找尋我的情緒頁 按鈕
+.btn-find {
+    width: 30%;
+    border-radius: 1000px;
+    border: 4px solid $main;
+    padding: 32px 36px;
+    h2 {
+        width: 100%;
+        padding-bottom: 16px;
+        color: $main;
+        text-align: center;
+        font-size: 36px;
+    }
+    img {
+        min-width: 80%;
+        transform:scale(1,1);
+        transition: all .5s ease-out;
+    }
+    .hover {
+        display: none;
+    }
+}
+.btn-find:hover {
+    box-shadow: 0px 6px 16px rgba($gray-550, .5);
+    border: 8px solid $main;
+    // .default {
+    //     display: none;
+    // }
+    // .hover {
+    //     display: block;
+    // }
+    img {
+        transform:scale(1.2,1.2);
+    }
+}
