--- a/assets/scss/components/_titleBar.scss
+++ b/assets/scss/components/_titleBar.scss
@@ -2,4 +2,7 @@
     padding: 32px 0 8px 0;
     margin-bottom: 32px;
     border-bottom: 2px solid $main-tint02;
+    h2 {
+        font-size: 32px;
+    }
 }
