--- a/assets/scss/components/_emoTable.scss
+++ b/assets/scss/components/_emoTable.scss
@@ -12,7 +12,7 @@
         display: block;
         width: 24px;
         height: 24px;
-        background-image: url(../images/plus-btn.svg);
+        background-image: url(../images/plus-btn-table.svg);
         background-repeat: no-repeat;
         background-attachment: fixed;
         background-position: center;
