--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -15,6 +15,7 @@
 @import "./components/cards";
 @import "./components/emoTable";
 @import "./components/form";
+@import "./components/progressBar";
 
 @import './layout/header.scss';
 @import './layout/headerLogined';
