--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -8,7 +8,7 @@
 @import "./setting/reset";
 @import "./setting/base";
 
-@import "./components/fontWeight";
+@import "./components/font";
 @import "./components/button";
 @import "./components/guid";
 @import "./components/titleBar";
