--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -15,9 +15,9 @@
                 </ul>
             </div>
             <div class="me-72">
-                <a href="mailto:wave_emocards@gmail.cooom">
+                <a href="mailto:wave_emocards@gmail.com">
                     <h3>聯絡我們</h3>
-                    <span>wave_emocards@gmail.cooom</span>
+                    <span>wave_emocards@gmail.com</span>
                 </a>
             </div>
         </div>
